--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -111,9 +111,23 @@ img {
   margin-left: auto;
   margin-right: auto;
     margin-bottom: 60px;
-    width: 100%;
-    height: 100%;
+max-height: 300px;
+max-width: 90%;
+
+
   }
+
+table {
+  border-collapse: collapse;
+  width: 90%;
+  margin: 0 auto;
+    margin-bottom: 40px;
+}
+
+th {
+  border-bottom: 1px solid black;
+  padding: 15px;
+}
 
 .logo_text {
 
