testing mobile hover links

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -14,10 +14,7 @@ body {
     float: right;
 }
 
-.hamburger_toggle:hover{
-    cursor: pointer;
-    color: #de01d6;
-    }
+
 
 input {
      border: 0;
@@ -181,20 +178,14 @@ main{
      text-decoration: none;
      color: #de01d6;
 }
- a:hover {
-     text-decoration: underline;
-     color: #de01d6;
-}
+
  .header-anchor {
      color: black;
 }
  .underline_span {
      color: black;
 }
- .hitbox_span:hover .underline_span {
-     color: #de01d6;
-     text-decoration: underline;
-}
+
  .router-link-active .hitbox_span .underline_span {
      text-decoration: underline;
      color: #de01d6;
@@ -296,6 +287,23 @@ main{
         margin-top: 10px;
     }
     
+}
+
+
+@media (hover: hover) {
+    .hamburger_toggle:hover {
+        cursor: pointer;
+        color: #de01d6;
+    }
+    a:hover {
+        text-decoration: underline;
+        color: #de01d6;
+    }
+
+ .hitbox_span:hover .underline_span {
+        color: #de01d6;
+        text-decoration: underline;
+}
 }
 
 
