fixed nav burger, added disclaim for edit.

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -6,13 +6,11 @@ body {
 }
 
 .hamburger_align {
-    margin-top: 20px !important;
-     margin-bottom: 20px !important;
+    margin-top: 17px !important;
+     margin-bottom: 17px !important;
+          width: 90%;
+     margin: auto;
     }
-
-.hamburger_toggle {
-    float: right;
-}
 
 
 
@@ -117,13 +115,13 @@ input {
 
 .sticky_head {
     position: fixed; 
-  top: 0; 
+  top: 0;   
   width: 100%;
   z-index: 999;
   background: white;
-  height: 65px;
+  height: 70px;
   display: none;
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid black;
 
 }
 
@@ -144,12 +142,10 @@ main{
  .main_content_container {
      width: 680px;
      margin: 0 auto;
-     padding-top: 50px;
+     padding-top: 70px;
 }
 
-.layout .sticky_head {
-    display: none;
-}
+
 
 
 /*add important to catch missing inline overriding styles*/
@@ -275,12 +271,12 @@ main{
     .layout.mobile_nav_active aside .center_nav_container{
         width: 60%;}
 
-    .layout.mobile_nav_active .sticky_head .center_nav_container .hamburger_toggle{
+    .layout.mobile_nav_active .sticky_head .hamburger_toggle{
         color: #de01d6;
         }
 
             .layout.mobile_nav_active .sticky_head {
-          border-bottom: 2.5px solid #de01d6;
+          border-bottom: 3px solid #de01d6;
         }
 
     .layout.mobile_nav_active aside .logo_container   {
